--- a/NewsPaper/news/templates/news/post_detail.html
+++ b/NewsPaper/news/templates/news/post_detail.html
@@ -7,4 +7,19 @@
 <h2>{{ post.title|censor }}</h2>
 <p><strong>Дата:</strong> {{ post.created_at|date:"d.m.Y" }}</p>
 <p>{{ post.content|censor }}</p>
+
+{% for category in post.categories.all %}
+    <p><strong>Категория:</strong> {{ category.name }}</p>
+
+    {% if user.is_authenticated %}
+        {% if user not in category.subscribers.all %}
+            <form method="post" action="{% url 'subscribe' category.id %}">
+                {% csrf_token %}
+                <button type="submit">Подписаться на категорию</button>
+            </form>
+        {% else %}
+            <p>✅ Вы подписаны на эту категорию</p>
+        {% endif %}
+    {% endif %}
+{% endfor %}
 {% endblock %}
